@@ -13,6 +13,8 @@ Summary of important user-visible changes for statistics 1.2.4:
  
  ** Bug fix in stepwisefit.
 
+ ** Rewrite of cmdscale for improved compatibility.
+
  ** The following functions are new:
  
     cdf dcov qrandn randsample signtest ttest ttest2 vartest vartest2 ztest
